# gbgcppmeetup

1. Soft-intro to C++/: CMakeLists.txt  Readme.md
1. Soft-intro to C++/src/: Foo.cpp  Foo.hpp  example.cpp
